Fixed edit appointment btn not visible on small screens

--- a/src/components/AppointmentDetails/styles.scss
+++ b/src/components/AppointmentDetails/styles.scss
@@ -42,6 +42,7 @@
     padding-right: 1rem;
     flex: 1;
     position: relative;
+    overflow-y: scroll;
 
     .spinner {
       color: #3A83DC;
